# weather_pipeline

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
dags/: weather_dag.py
data/raw_data/: weather_data
notebooks/: analysis.ipynb
scripts/: run_extract.py
src/etl/extract/: extract_data.py
src/etl/load/: load_data.py
src/etl/transform/: transform_data.py
tests/: test_extract.py  test_transform.py
