[project]
name = "pipeline-weather"
version = "0.1.0"
description = "Weather ETL pipeline using OpenWeather API with Airflow orchestration"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]